# dcm-1-firmware

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  README3.md  http_app.h.foo.h  sdkconfig  sdkconfig.defaults  sdkconfig.old
app_logic/: app_logic.c
certs/: client.crt
components/app_logic/: CMakeLists.txt  app_logic.c  app_logic.h
components/app_logic/include/: app_logic.h
components/board_manager/: CMakeLists.txt  board_manager.c  board_manager.h
components/board_manager/include/: board_manager.h
components/cert_loader/: CMakeLists.txt
components/cert_loader/src/: cert_loader.c
components/esp32-wifi-manager/: CMakeLists.txt  Kconfig.projbuild  code.js  http_app.c  http_app.h  index.html  style.css  wifi_manager.c  wifi_manager.h
components/esp32-wifi-manager/include/: http_app.h  wifi_manager.h
components/esp32-wifi-manager/src/: dns_server.c  http_app.c  http_app.h
components/mqtt_manager/: CMakeLists.txt  Kconfig  Kconfig.projbuild  certs.h  mqtt_manager.c  mqtt_manager.h
components/mqtt_manager/certs/: client.key
components/mqtt_manager/include/: client_crt.h  client_key.h  mqtt_manager.h  root_ca.h
components/provisioning_manager/: CMakeLists.txt  Kconfig  provisioning_manager.c  provisioning_manager.h
components/sensor_manager/: CMakeLists.txt  Kconfig
components/wifi_manager/: CMakeLists.txt  CMakeLists.txt.Copy.txt  Kconfig  code.js  http_app.c  index.html  index.html.bak  wifi_manager.c  wifi_manager.h
components/wifi_manager/.github/ISSUE_TEMPLATE/: bug_report.md
components/wifi_manager/include/: http_app.h  wifi_manager.h
components/wifi_manager/include/include/: wifi_manager.h
components/wifi_manager/src/: dns_server.h  http_app.c  http_app.h  nvs_sync.c  nvs_sync.h
main/: CMakeLists.OLD  CMakeLists.bak  CMakeLists.txt  cert_loader.c  httpd_server.c  main.c  main.c.bak  sensors.c
main/assets/: code.js  index.html  style.css
main/certs/: root_ca.pem
main/include/: cert_loader.h  device_config.h  httpd_server.h  httpd_uris.h  sensors.h
partitions/: partition-table.csv
scripts/: automate_edits.sh  merge_wifi_manager.sh
