idf_component_register(
    SRCS
        "main.c"
        "httpd_server.c"
    INCLUDE_DIRS
        "include"
    PRIV_REQUIRES
        app_logic
        board_manager
        mqtt_manager
        cJSON
        esp_event
        esp_http_server
        esp_netif
        esp_system
        esp_wifi
        log
        nvs_flash
        spiffs
)
