set(COMPONENT_SRCS
    "wifi_manager.c"
    "src/http_app.c"
    "src/dns_server.c"
)

set(COMPONENT_ADD_INCLUDEDIRS
    "."
    "src"
)

idf_component_register(
    SRCS "${COMPONENT_SRCS}"
    INCLUDE_DIRS "${COMPONENT_ADD_INCLUDEDIRS}"
    REQUIRES nvs_flash esp_wifi esp_event esp_netif mdns esp_http_server
)

# Default build configuration
set(DEFAULT_SSID "myssid" CACHE STRING "")
set(DEFAULT_PASSWORD "mypassword" CACHE STRING "")
set(DEFAULT_HOSTNAME "esp32" CACHE STRING "")
set(DEFAULT_AP_IP "192.168.4.1" CACHE STRING "")
set(DEFAULT_AP_GATEWAY "192.168.4.1" CACHE STRING "")
set(DEFAULT_AP_NETMASK "255.255.255.0" CACHE STRING "")
set(DEFAULT_AP_CHANNEL 1 CACHE STRING "")
set(DEFAULT_AP_MAX_CONNECTIONS 4 CACHE STRING "")
set(DEFAULT_WIFI_POWER_SAVE WIFI_PS_NONE CACHE STRING "")
set(DEFAULT_SCAN_METHOD WIFI_ALL_CHANNEL_SCAN CACHE STRING "")
set(DEFAULT_SORT_METHOD WIFI_CONNECT_AP_BY_SIGNAL CACHE STRING "")
set(DEFAULT_AUTHMODE WIFI_AUTH_WPA2_PSK CACHE STRING "")
set(DEFAULT_THRESHOLD_RSSI -127 CACHE STRING "")
set(DEFAULT_THRESHOLD_AUTHMODE WIFI_AUTH_OPEN CACHE STRING "")
set(DEFAULT_WEB_PORT 80 CACHE STRING "")
set(DEFAULT_CAPTIVE_PORTAL_ENABLE 1 CACHE STRING "")
set(DEFAULT_AP_HIDE_SSID 0 CACHE STRING "")
set(DEFAULT_AP_BEACON_INTERVAL 100 CACHE STRING "")
set(DEFAULT_AP_SSID "ESP32_AP" CACHE STRING "")
set(DEFAULT_AP_PASSWORD "12345678" CACHE STRING ""
)

target_compile_definitions(${COMPONENT_LIB} PUBLIC
    "-DDEFAULT_SSID=\"${DEFAULT_SSID}\""
    "-DDEFAULT_PASSWORD=\"${DEFAULT_PASSWORD}\""
    "-DDEFAULT_HOSTNAME=\"${DEFAULT_HOSTNAME}\""
    "-DDEFAULT_AP_IP=\"${DEFAULT_AP_IP}\""
    "-DDEFAULT_AP_GATEWAY=\"${DEFAULT_AP_GATEWAY}\""
    "-DDEFAULT_AP_NETMASK=\"${DEFAULT_AP_NETMASK}\""
    "-DDEFAULT_AP_CHANNEL=${DEFAULT_AP_CHANNEL}"
    "-DDEFAULT_AP_MAX_CONNECTIONS=${DEFAULT_AP_MAX_CONNECTIONS}"
    "-DDEFAULT_WIFI_POWER_SAVE=${DEFAULT_WIFI_POWER_SAVE}"
    "-DDEFAULT_SCAN_METHOD=${DEFAULT_SCAN_METHOD}"
    "-DDEFAULT_SORT_METHOD=${DEFAULT_SORT_METHOD}"
    "-DDEFAULT_AUTHMODE=${DEFAULT_AUTHMODE}"
    "-DDEFAULT_THRESHOLD_RSSI=${DEFAULT_THRESHOLD_RSSI}"
    "-DDEFAULT_THRESHOLD_AUTHMODE=${DEFAULT_THRESHOLD_AUTHMODE}"
    "-DDEFAULT_WEB_PORT=${DEFAULT_WEB_PORT}"
    "-DDEFAULT_CAPTIVE_PORTAL_ENABLE=${DEFAULT_CAPTIVE_PORTAL_ENABLE}"
    "-DDEFAULT_AP_HIDE_SSID=${DEFAULT_AP_HIDE_SSID}"
    "-DDEFAULT_AP_BEACON_INTERVAL=${DEFAULT_AP_BEACON_INTERVAL}"
    "-DDEFAULT_AP_SSID=\"${DEFAULT_AP_SSID}\""
    "-DDEFAULT_AP_PASSWORD=\"${DEFAULT_AP_PASSWORD}\""
)