set(COMPONENT_SRCS "wifi_manager.c"
                   "src/http_app.c")

set(COMPONENT_ADD_INCLUDEDIRS "src")

idf_component_register(SRCS "${COMPONENT_SRCS}"
                       INCLUDE_DIRS "${COMPONENT_ADD_INCLUDEDIRS}"
                       REQUIRES nvs_flash esp_wifi esp_event esp_netif mdns)

# Default build configuration
if(NOT DEFINED DEFAULT_SSID)
    set(DEFAULT_SSID "myssid")
endif()

if(NOT DEFINED DEFAULT_PASSWORD)
    set(DEFAULT_PASSWORD "mypassword")
endif()

if(NOT DEFINED DEFAULT_HOSTNAME)
    set(DEFAULT_HOSTNAME "esp32")
endif()

if(NOT DEFINED DEFAULT_AP_IP)
    set(DEFAULT_AP_IP "192.168.4.1")
endif()

if(NOT DEFINED DEFAULT_AP_GATEWAY)
    set(DEFAULT_AP_GATEWAY "192.168.4.1")
endif()

if(NOT DEFINED DEFAULT_AP_NETMASK)
    set(DEFAULT_AP_NETMASK "255.255.255.0")
endif()

if(NOT DEFINED DEFAULT_AP_CHANNEL)
    set(DEFAULT_AP_CHANNEL 1)
endif()

if(NOT DEFINED DEFAULT_AP_MAX_CONNECTIONS)
    set(DEFAULT_AP_MAX_CONNECTIONS 4)
endif()

if(NOT DEFINED DEFAULT_WIFI_POWER_SAVE)
    set(DEFAULT_WIFI_POWER_SAVE WIFI_PS_NONE)
endif()

if(NOT DEFINED DEFAULT_SCAN_METHOD)
    set(DEFAULT_SCAN_METHOD WIFI_ALL_CHANNEL_SCAN)
endif()

if(NOT DEFINED DEFAULT_SORT_METHOD)
    set(DEFAULT_SORT_METHOD WIFI_CONNECT_AP_BY_SIGNAL)
endif()

if(NOT DEFINED DEFAULT_AUTHMODE)
    set(DEFAULT_AUTHMODE WIFI_AUTH_WPA2_PSK)
endif()

if(NOT DEFINED DEFAULT_THRESHOLD_RSSI)
    set(DEFAULT_THRESHOLD_RSSI -127)
endif()

if(NOT DEFINED DEFAULT_THRESHOLD_AUTHMODE)
    set(DEFAULT_THRESHOLD_AUTHMODE WIFI_AUTH_OPEN)
endif()

if(NOT DEFINED DEFAULT_WEB_PORT)
    set(DEFAULT_WEB_PORT 80)
endif()

if(NOT DEFINED DEFAULT_CAPTIVE_PORTAL_ENABLE)
    set(DEFAULT_CAPTIVE_PORTAL_ENABLE 1)
endif()

if(NOT DEFINED DEFAULT_AP_HIDE_SSID)
    set(DEFAULT_AP_HIDE_SSID 0)
endif()

if(NOT DEFINED DEFAULT_AP_BEACON_INTERVAL)
    set(DEFAULT_AP_BEACON_INTERVAL 100)
endif()

if(NOT DEFINED DEFAULT_AP_SSID)
    set(DEFAULT_AP_SSID "PianoGuard-DCM-1-Setup")
endif()

if(NOT DEFINED DEFAULT_AP_PASSWORD)
    set(DEFAULT_AP_PASSWORD "pianoguard")
endif()

target_compile_definitions(${COMPONENT_LIB} PUBLIC
    "-DDEFAULT_SSID=\"${DEFAULT_SSID}\""
    "-DDEFAULT_PASSWORD=\"${DEFAULT_PASSWORD}\""
    "-DDEFAULT_HOSTNAME=\"${DEFAULT_HOSTNAME}\""
    "-DDEFAULT_AP_IP=\"${DEFAULT_AP_IP}\""
    "-DDEFAULT_AP_GATEWAY=\"${DEFAULT_AP_GATEWAY}\""
    "-DDEFAULT_AP_NETMASK=\"${DEFAULT_AP_NETMASK}\""
    "-DDEFAULT_AP_CHANNEL=${DEFAULT_AP_CHANNEL}"
    "-DDEFAULT_AP_MAX_CONNECTIONS=${DEFAULT_AP_MAX_CONNECTIONS}"
    "-DDEFAULT_WIFI_POWER_SAVE=${DEFAULT_WIFI_POWER_SAVE}"
    "-DDEFAULT_SCAN_METHOD=${DEFAULT_SCAN_METHOD}"
    "-DDEFAULT_SORT_METHOD=${DEFAULT_SORT_METHOD}"
    "-DDEFAULT_AUTHMODE=${DEFAULT_AUTHMODE}"
    "-DDEFAULT_THRESHOLD_RSSI=${DEFAULT_THRESHOLD_RSSI}"
    "-DDEFAULT_THRESHOLD_AUTHMODE=${DEFAULT_THRESHOLD_AUTHMODE}"
    "-DDEFAULT_WEB_PORT=${DEFAULT_WEB_PORT}"
    "-DDEFAULT_CAPTIVE_PORTAL_ENABLE=${DEFAULT_CAPTIVE_PORTAL_ENABLE}"
    "-DDEFAULT_AP_HIDE_SSID=${DEFAULT_AP_HIDE_SSID}"
    "-DDEFAULT_AP_BEACON_INTERVAL=${DEFAULT_AP_BEACON_INTERVAL}"
    "-DDEFAULT_AP_SSID=\"${DEFAULT_AP_SSID}\""
    "-DDEFAULT_AP_PASSWORD=\"${DEFAULT_AP_PASSWORD}\""
)